@@ -1,3 +1,6 @@
+Changelog v5.1.75 (2024-03-06):
+- Fixed monitor bug
+
 Changelog v5.1.74 (2024-03-04):
 - Fixed Freezing and Cache this time
 
